# colte

./: .gitignore  .prettierignore  .prettierrc.yml  LICENSE.md  Makefile  NOTES  NOTICE  README.conf  README.md  SECURITY.md  clean.sh  coltenv  generate_coltenv  install_rocketchat.sh  main.h  nfpm-colte-cn-4g.yaml  nfpm-colte-essential.yaml  nfpm-colte-prepaid.yaml  nfpm-colte.yaml  nfpm.yaml  rocketchat.conf  rocketchat.yml  run_on_restart.sh  sample_db.sql  sample_load_users.sh  webservices.yml  xowa.conf  xowa.yml
.github/workflows/: build-and-package.yml  check-formatting.yml  codeql-analysis.yml  js-unit-tests.yml  main.yml
colte-common-models/: customer.js  index.js  knexfile.js  package-lock.json  package.json
conf/: bulk_add.sh  colteconf  colteconf.py  colteconf.sh  coltedb  coltedb.py  coltedb.sh  coltenat.sh  config.yml  open5gs_dbconf.sh  postinst  scripts.py
conf/colte/: colte_interactive.py
config/: epc
develop_epc/etc/: mme.conf  spgw.conf
develop_epc/install_scripts/: debian-9.3.yml  debian-9.4.yml  ubuntu-18.04.yml
develop_epc/scripts/: hss_db_add_mme  hss_db_export
develop_epc/spencer_configs/: bokondini.sql  hss.conf  iptables.sh  mme.conf  sample_db.sql  spgw.conf
docs/: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  about.md  index.md
docs/tutorials/: epc-setup-es.md  epc-setup.md  index.md
documents/mozilla_site/: index.html  specs.html
emergency/: .gitignore  README.md  homepage.conf  homepage.yml  osm.conf  osm.yml  registry.conf  registry.yml  rocketchat.yml  start.sh  xowa.conf  xowa.yml  zone_db
emergency/homepage/: contact.html  index.html  jquery-3.js  popper.js
emergency/install_scripts/: debian-9.4.yml  run.yml  ubuntu-17.10.yml
emergency/osm/: Vagrantfile
emergency/registry/: db.sqlite3  registry.service
emergency_webservices/: README.md  homepage.conf  homepage.yml  rocketchat.conf  rocketchat.yml  start.sh  webservices.yml  xowa.conf  xowa.yml
emergency_webservices/homepage/: index.html
emergency_webservices/install_scripts/: debian-9.3.yml  debian-9.4.yml  run.yml  ubuntu-17.10.yml  webservices.yml
enbrains/: .gitignore  Makefile  README.md  main.c
enbrains/install_scripts/: debian-9.3.yml
epc/: .gitignore  Makefile  OLDREADME  OPENAIR-CN_README  README  README.md  configs  iptables.sh  oaienv  python_nw_test.py  test_hss_msg_client.c  test_sgw_msg_client.c
epc/docs/: EPC_User_Guide.odt
epc/etc/: acl.conf  hss.conf  mme.conf
epc/install_scripts/: debian-9.3.yml  debian-9.4.yml  freediameter.yml  run.yml  ubuntu-17.10.yml  ubuntu-18.04.yml
epc/scripts/: build_hss  build_mme  build_spgw  check_mme_s6a_certificate  hss_db_create  hss_db_export  hss_db_import  run_hss  run_mme  run_spgw
epc/spencer_configs/: bokondini.sql  hss.conf  iptables.sh  mme.conf  mme_fd.conf  sample_db.sql  spgw.conf
epc/spencer_scripts/: add_remove_user.py  database_watchdog.py  epc.service  hss.service  install_epc_config.sh  mme.service  python_nw_test.py  spgw.service  spgw_nat.service  synchronize_dbs.py  synchronize_dbs.sh  test_hss_msg_client.c
etc/: mme_fd.conf  spgw.conf
ims/: README.md  debian-9.3.yml
lte_extras/: named.conf.local  rocketchat.conf
lte_extras/billing/: Pipfile  db_interface.py  import_to_db.py  import_to_db.sh  iptables_watchdog.py  tmp_dump.txt
lte_extras/bind/: db  db.bokondini  debian-9.4.yml  named.conf.local  named.conf.options
lte_extras/chat/: debian-9.4.yml
lte_extras/ims/: README.md  (+3 more)
new_system_prep/: README
old_epc/: cscope.out.REMOVED.git-id  logs
old_epc/src/test/: Makefile.am  oaisim_mme_list_benchmark.c  test_mme_app_ue_context.c  test_secu_kenb.c  test_secu_knas_encrypt_eea1.c  test_secu_knas_encrypt_eea2.c  test_secu_knas_encrypt_eia2.c
old_epc/src/test/scenarios/: generic_scenario.xsl
package/: colte-nat.service  colte-webadmin.service  colte-webgui.service  freediameter_1.2_amd64.deb  haulage.yml  libgtpnl_0.9_amd64.deb  liblfds_0.9_amd64.deb  postinst  postinstall.sh  postremove.sh  postrm  preremove.sh  sample_db.sql  transaction_log.txt
python/: colteconf.py  colteconf_cn_4g.py  colteconf_prepaid.py  coltedb.py  coltedb_cn_4g.py  coltedb_prepaid.py  migrate_mysql_to_pg.py  pyproject.toml
scripts/: build_enbrains.sh  build_mme  build_spgw  check_hss_s6a_certificate  hss_db_create  test_epc
spencer_configs/: hss.conf  mme.conf  spgw.conf
src/test/: CMakeLists.txt  oaisim_mme_s1ap_test.c  test_aes128_cmac_encrypt.c  test_secu_knas_encrypt_eia1.c  test_secu_knas_stream_int.c
system_setup/: Vagrantfile  ansible.sh  basic_install.yml  default_config.yml  full_install.yml  install.sh  play.yml  reconfigure.yml  setup.sh  source_build.yml  webservices.yml
webadmin/: Makefile  README.md  app.js  package-lock.json  package.json  production.env  sample_db.sql
webgui/: Makefile  README.md  app.js  package-lock.json  package.json  pricing.json  production.env
webservices/: README.md  app.js  debian-9.3.yml  knexfile.js  package-lock.json  package.json  production.env
(+1854 files in other folders)
